# all_repo

./: 1. matrices por canal - ETL_2.ipynb  2. matrices por canal - resultados.ipynb  AthenaQueryExecutor.py  CHANGELOG.md  CO_GESTIONFRAUDE_FRE_NOOPS_DEVICE_ID_WAF_ES01.py  Desfavorable.docx  ETLExperian.py  Hist Respuesta macro.xlsx  Image.jfif  MANIFEST.in  Manual Macro Receptores de Fraude.docx  README.md  SqlRender.py  V1.0_recuperaciones.xlsm  analytics_sources.yml  azure-pipeline.yaml  azure-pipelines.yml  cast_datatypes_athena.sql  co_abonos_dobles.sql  co_abonos_dobles.yml  co_masivo_cierres_experian.sql  co_masivo_cierres_experian.yml  constants.py  consulta.sql  curated_sources.yml  dbt_project.yml  delete_insert_iceberg.sql  extract.py  finacle_productos.sql  finacle_trx.sql  load.py  main.ipynb  nx.json  package.json  raw.sql  raw_sources.yml  requirements.txt  script_producto_hist.ipynb  setup.cfg  transforms.py  (+1 more)
