[metadata]
name = product_logs_consultas_agentes
version = 0.0.1
author = Diego Sanchez
#url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = Curado tabla raw co_zendesk_logs_consultas_agentes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data_engieering
license = BSD 3-Clause License

[options]
include_package_data = True
package_dir =
    product_logs_consultas_agentes = src/product_logs_consultas_agentes
    product_logs_consultas_agentes.extra = src/product_logs_consultas_agentes/extra
    metadata = src/metadata

[options.package_data]
metadata = *.yml

py_modules = product_logs_consultas_agentes
python_requires = >=3.8
